--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Cadastro de Ninja
+
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.driver=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=12345
+spring.h2.console.enabled=true
