--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=Cadastro de Ninja
 
-spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=12345
+
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.h2.console.enabled=true
