--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=Cadastro de Ninja
 
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# DB
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
