--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+data/
+.env
 
 ### STS ###
 .apt_generated
@@ -31,5 +33,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-.env
